# Codediff-backend

./: .env  .gitignore  README.md  gunicorn_config.py  init.sh  pyproject.toml  run.py  test  test.cpp  test.py  test.sh
app/: __init__.py  commands.py  config.py  exceptions.py  extensions.py  models.py
app/routes/: admin.py  ai.py  auth.py  diff.py  sessions.py
app/schemas/: admin.py  ai.py  auth.py  diff.py  session.py
app/utils/: ai_client.py  auth.py  decorators.py  email_sender.py  sandbox.py  sse.py
migrations/versions/: 0e74dde840f8_.py  39c9b4516d4c_add_ocr_fields.py  4d521aca468d_.py  5976da2fcbfb_add_role_column_to_users.py  6fca792f630f_.py  8a34ee455d6d_.py  b0440e3e4186_.py  b9e047da44f4_add_stop_requested_to_session.py  e3dfa1d3dfa5_.py  ee8dbb55769d_.py  f3de2f714953_.py
tools/: Makefile  rlimit_wrapper  rlimit_wrapper.cpp  test.cpp
